# FileTransferSimulation

./: CMakeLists.txt
src/: Customer.cpp  Customer.hpp  Directory.cpp  Directory.hpp  File.cpp  File.hpp  MainWindow.cpp  MainWindow.hpp  Simulation.cpp  Simulation.hpp  main.cpp
